fixed: container layout issue

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -14,9 +14,11 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
+  width: 100%;
   font-family: "Nunito Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
@@ -24,7 +26,7 @@ body {
   background-image: variables.$gradient;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 4rem;
+  overflow-x: hidden;
 
   @media only screen and (max-width: variables.$bp-medium) {
     padding: 0;
